test/vm/fails/commit_out_of_gas.js

var test = [];

for(var i = 0; i < 10000; ++i) {
	push(test, i);
}
